# afc-website-revamp

./: .gitignore  app.py  docker-compose.laptop.yml  docker-compose.yml
.github/workflows/: deploy-production.yml  deploy-staging.yml
apps/web/: Dockerfile
apps/web/src/: App.vue
apps/web/src/router/: index.ts
apps/web/src/services/: api.ts
apps/web/src/views/: HomeView.vue
backend/: .dockerignore  Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/modules/auth/: __init__.py  routes.py
backend/app/modules/core/: __init__.py  routes.py
backend/app/modules/teams/: __init__.py  routes.py
backend/database/: database.py
backend/database/models/: users.py
backend/migrations/: env.py
backend/migrations/versions/: 2e0af517c82b_create_users_table.py
backend/scripts/: migrate_users.py
env/: global.env.example
frontend/web/: package-lock.json  vite.config.ts
frontend/web/src/: App.vue
frontend/web/src/router/: index.ts
frontend/web/src/services/: api.ts
frontend/web/src/views/: LoginView.vue
proxy/: Dockerfile  nginx.conf  nginx.render.conf
