[project]
name = "afcadinho-web-revamped"
version = "0.1.0"
description = ""
authors = [
    {name = "Afc_Adinho",email = "afcadinho@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
